﻿- Fixed: - HTML tags not getting filtered in extracted title from Readability
- Feature: Separate Body links from Navigation/header/menu/footer links
- Feature: Add caching layer
- Fixed: <script type="template"> can cause markup to appear in Link text
- Feature: Word Count and Reading Time displayed for articles
- Feature: Add size savings in footer
- Feature: Add copyright notice driven by site owner
- Feature: Better detection of article-style pages use META tags
- Feature: Detect RSS/Atom feeds and use those for making list of links
- Feature: Add TABLE tag support
- Fixed: Remove SVG so there internal text like titles don't appear in content links
- Feature: Switching between modes
- Feature: Site name in title
- Fixed: Articles that passed readability still had no content
- Fixed: Consistent rendering of site name/article title for Content, Link, RSS, or Raw modes
- Feature: Always offer raw mode option
- Fixed: Only show host for HTTP/HTTPS links
- Fixed: Don't proxy non-HTTP/HTTPS links
- Feature: Uses reusable HtmlToGmi library 
- Feature: Use HTTP compression to speed up downloads
- Feature: Display external content links at body of news article
- Fixed: Trim excessive link text for articles in links view. (Looking at your NY Times which your 400+ character multi-sentence headlines!)
- Fixed: Properly HTML decode feed item titles
- Fixed: Gracefully handle non-HTTP URLs directly entered into app
- Fixed: Handle exceptions thrown from SmartReader 